Fixed spacing issues

--- a/blocks/image-near-hotels/image-near-hotels.css
+++ b/blocks/image-near-hotels/image-near-hotels.css
@@ -30,6 +30,10 @@
 .ch-icon-map-marker::before {
   font-family: chFont, sans-serif;
   content: '';
+  font-style: normal;
+  font-weight: 400;
+  position: relative;
+  vertical-align: middle;
 }
 
 .ch-icon-arrow-right::before {
@@ -43,11 +47,11 @@ main .text-in-image a{
   font-size: var(--body-font-size-xs);
   text-align: right;
   font-family: var(--body-font-family);
+  letter-spacing: 0;
   text-decoration: none;
   border: 0;
   padding: 0;
   font-style: normal;
-  font-weight: var(--font-weight-bold);
   cursor: pointer;
   color: var(--background-color);
   background-color: transparent;
@@ -65,7 +69,7 @@ main .text-in-image a:hover{
 .text-in-image {
   bottom: 0;
   left: auto;
-  padding: 10px 0.3em;
+  padding: 0.2em 0.1em;
   position: absolute;
   right: 0;
   text-align: right;
